# lets_enjoy_cv_programing

./: .gitignore
Kondo/Slides/: CV勉強会_160724_(3-1-2～3-2)_kondo.ppt  CV勉強会_160903_(8.3.1～8.3.4)_kondo.ppt
Kondo/lesson_1/: les1_main.cpp  main.cpp
Kondo/lesson_2/: les2_main.cpp
Kondo/lesson_3/: averageFilter.cpp  diffFilter.cpp  filter.h  main.cpp  specialFilter.cpp  unsharpmask.cpp
Kuramochi/cv_practice_01/: cv_practice_01.sln
Kuramochi/cv_practice_01/cv_practice_01/: ReadMe.txt  cv_practice_01.cpp  cv_practice_01.vcxproj  cv_practice_01.vcxproj.filters  stdafx.cpp
Watanabe/cv_benkyokai/cv_benkyokai/: main.cpp
Watanabe/cv_benkyokai/cv_benkyokai.xcodeproj/: project.pbxproj
Watanabe/cv_benkyokai/cv_benkyokai.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Watanabe/cv_benkyokai/cv_benkyokai.xcodeproj/project.xcworkspace/xcuserdata/Hiroyuki.xcuserdatad/: UserInterfaceState.xcuserstate
Watanabe/cv_benkyokai/cv_benkyokai.xcodeproj/xcuserdata/Hiroyuki.xcuserdatad/xcschemes/: cv_benkyokai.xcscheme  xcschememanagement.plist
_lesson/20160709/: lesson_01.txt
_lesson/20160729/: lesson_02.txt
komatsuzaki/: test_komatsuzaki.txt
ktakayama/opencvsample/: opencvsample.sln
ktakayama/opencvsample/opencvsample/: IPcommon.cpp  IPcommon.h  IPfilter.cpp  IPfilter.h  IPfunc.cpp  IPfunc.h  IPinterpolation.cpp  IPinterpolation.h  ReadMe.txt  opencvsample.cpp  opencvsample.h  opencvsample.vcxproj  opencvsample.vcxproj.filters  stdafx.cpp
sakiyama/cv_beginers/cv_beginers/: SameImageFile.cpp  SameImageFile.hpp  Util.cpp  Util.hpp  basic.h  lesson1.cpp  lesson1.hpp  lesson2.cpp  lesson2.hpp  lesson3.cpp  lesson3.hpp  main.cpp
sakiyama/cv_beginers/cv_beginers.xcodeproj/: project.pbxproj
sakiyama/cv_beginers/cv_beginers.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
sakiyama/cv_beginers/cv_beginers.xcodeproj/project.xcworkspace/xcshareddata/: cv_beginers.xcscmblueprint
sakiyama/cv_beginers/cv_beginers.xcodeproj/project.xcworkspace/xcuserdata/sakiyamaK.xcuserdatad/: UserInterfaceState.xcuserstate
sakiyama/cv_beginers/cv_beginers.xcodeproj/xcuserdata/sakiyamaK.xcuserdatad/xcschemes/: cv_beginers.xcscheme  xcschememanagement.plist
sakiyama/first_deeplearning/: .gitignore  README.md  run_docker.sh
sakiyama/python/: 7-1-3.py  9-3.py  const.py  util.py
shimizu/ComputerVisionStudy/MFCOpenCV/: MFCOpenCV.cpp  MFCOpenCV.h  MFCOpenCV.rc  MFCOpenCVDlg.cpp  MFCOpenCVDlg.h  resource.h  stdafx.cpp
shimizu/ComputerVisionStudy/MFCOpenCV/res/: MFCOpenCV.rc2
shimizu/ComputerVisionStudy/MFCProject/: BilateralFilter.cpp  BilateralFilter.h  ColorSpaceDlg.cpp  ColorSpaceDlg.h  Grayscale.cpp  Grayscale.h  HueFilter.cpp  HueFilter.h  HueFilterDlg.cpp  HueFilterDlg.h  ImageProcessor.cpp  ImageProcessor.h  KernelFilter.cpp  KernelFilter.h  MFCProject.cpp  MFCProject.h  MFCProject.rc  MFCProject.vcxproj  MFCProject.vcxproj.filters  MainDlg.cpp  MainDlg.h  MedianFilter.cpp  MedianFilter.h  NonlocalMeansFilter.cpp  NonlocalMeansFilter.h  Original.cpp  Original.h  PictureDlg.cpp  PictureDlg.h  ProcessDlg.cpp  ProcessDlg.h  Resize.cpp  Resize.h  ResizeDlg.cpp  ResizeDlg.h  Sample.cpp  Sample.h  Utility.cpp  Utility.h  resource.h  (+1 more)
shimizu/ComputerVisionStudy/MFCProject/Debug/: MFCProject.res
shimizu/ComputerVisionStudy/MFCProject/res/: MFCProject.rc2
shintani/ConsoleApplication1/: ConsoleApplication1.sln
shintani/ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.vcxproj
shintani/ConsoleApplication4/: ConsoleApplication4.sln
shintani/ConsoleApplication4/ConsoleApplication4/: ConsoleApplication4.cpp  ConsoleApplication4.vcxproj
takahama/lesson_02/: Source2.cpp
toyoshi/: .gitignore  CMakeLists.txt  Makefile  cv_shokyu  opencv_sample.cpp
toyoshi/aichallenge/tutorial/: tutorial.py
toyoshi/imagestitching/: #imagestitching.cpp#  CMakeLists.txt  imagestitching.cpp
toyoshi/imagestitching/include/: CornerDetector.hpp  ImageSticher.hpp  ImageStitcher_flymake.hpp  UniqueRandomSampler.hpp
toyoshi/imagestitching/src/: CornerDetector.cpp  ImageSticher.cpp  ImageStitcher.cpp  UniqueRandomSampler.cpp
toyoshi/klt/: sample.py
toyoshi/sec1/: CMakeLists.txt  cv_shokyu  opencv_sample.cpp
toyoshi/sec2/: CMakeLists.txt  cv_shokyu  lesson2.cpp
toyoshi/sec3/: CMakeLists.txt  lesson3.cpp
toyoshi/sec4/: CMakeLists.txt  lesson4.cpp
toyoshi/test/: CMakeLists.txt  Makefile  cv_shokyu  differentTypeMatTest.cpp  matAccessTest.cpp
toyoshi/textlocalization/: CMakeLists.txt  textlocalization.cpp
toyoshi/textlocalization/include/: TextDetector.hpp
toyoshi/textlocalization/src/: TextDetector.cpp
toyoshi/toyocv/: CMakeLists.txt
toyoshi/toyocv/modules/imgproc/: CMakeLists.txt  Makefile  install_manifest.txt
toyoshi/toyocv/modules/imgproc/include/: BilinearResizer.hpp  NearestNeighborsResizer.hpp  Resizer.hpp  birateralfilter.hpp  boxfilter.hpp  differentialfilter.hpp  filter.hpp  imgproc.hpp  laplacian.hpp  laplacianfilter.hpp  sobelfilter.hpp
toyoshi/toyocv/modules/imgproc/src/: BilinearResizer.cpp  NearestNeighborsResizer.cpp  bilateral.cpp  boxfilter.cpp  color.cpp  differential.cpp  differentialfilter.cpp  filter.cpp  imgproc.cpp  laplacian.cpp  laplacianfilter.cpp  smooth.cpp  sobel.cpp  sobelfilter.cpp
